--- a/havainas.html
+++ b/havainas.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Automatic Email</title>
+    <title>%s</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
 <body style="margin:0; padding:10px 0 0 0;" bgcolor="#F8F8F8">
